service.yml
apiVersion: v1
kind: Service
metadata:
  name: es
spec:
  clusterIP: None
  selector:
    app: es
  ports:
    - port: 9200
      name: http
    - port: 9300
      name: transport
